# schmm

./: CMakeLists.txt  README.md
lib/inputparser/: InputParser.cpp
src/: schmm.cpp
